--- a/src/app/_heros/CustomHero/index.module.scss
+++ b/src/app/_heros/CustomHero/index.module.scss
@@ -47,6 +47,7 @@
   h2 {
     font-size: 70px;
     margin: 32px 0;
+    color: black;
 
     @include mid-break {
       font-size: 48px;
@@ -63,6 +64,7 @@
 
   p {
     font-size: 30px;
+    color: black;
 
     @include mid-break {
       font-size: 24px;
